# plugins_high-availability

./: .bazelrc  .buckconfig  .gitignore  BUCK  BUILD  Jenkinsfile  MODULE.bazel  README.md  WORKSPACE  external_plugin_deps.MODULE.bazel  external_plugin_deps.bzl  groups  high-availability_plugin_deps.lock.json  high-availability_third_party_runtime_jars.allowlist.txt  project.config  reviewers.config
example-setup/: Makefile  README.md  docker-compose.yaml
example-setup/active-active/: Makefile  docker-compose.yaml  haproxy.cfg
example-setup/active-active/gerrit/: Dockerfile  entrypoint.sh
example-setup/active-active/gerrit/configs/: gerrit.config  high-availability.config
example-setup/active-active/haproxy/: haproxy.cfg
example-setup/gerrit/: Dockerfile  entrypoint.sh
example-setup/gerrit/configs/: gerrit.config.template  high-availability.config.template
lib/gerrit/: BUCK
src/main/java/: LocalstackSnsSqsAsync.java
src/main/java/com/ericsson/gerrit/plugins/highavailability/: AccountReindexRunnable.java  ApiModule.java  AutoReindexAtStart.java  AutoReindexListener.java  ChangeReindexRunnable.java  ConfigUtil.java  ConfigurableAllowEventListeners.java  ConfigurableAllowedEventListeners.java  Configuration.java  EnvModule.java  ExecutorProvider.java  HttpModule.java  (+15 more)
src/main/resources/Documentation/: about.md  build.md  config.md
src/test/: README  README.md  TEST_HA
src/test/docker/: README.md  docker-compose.elasticsearch.yaml  docker-compose.yaml
src/test/docker/docker-syslog-ng-stdout/: Dockerfile  docker-entrypoint.sh
src/test/docker/docker-syslog-ng-stdout/config/: syslog-ng.conf
src/test/docker/etc/: gerrit.config  gerrit_es.config  high-availability.gerrit-01.config  high-availability.gerrit-02.config  jgit.config  zookeeper-refdb.config
src/test/docker/gerrit/: Dockerfile  entrypoint.sh  start.sh  wait-for-it.sh
src/test/docker/haproxy/: Dockerfile  haproxy.cfg
src/test/docker/nfs/: Dockerfile  exports.txt  gerrit-git-mount-entrypoint.sh
src/test/resources/: log4j.properties
tools/: BUILD  workspace-status.sh  workspace_status.py
tools/eclipse/: BUILD  project.sh
(+509 files in other folders)
